--- a/Views/Shop/Details.cshtml
+++ b/Views/Shop/Details.cshtml
@@ -20,6 +20,6 @@
 		<h3>@Model.Name</h3>
 		<h5>@Model.Price</h5>
 		<h4>@Model.Description</h4>
-		<a class="btn-primary" href="#">Add to Cart</a>
+		<a asp-controller="Cart" asp-action="AddToCartThroughDetails" asp-route-productId="@Model.ProductId" class="btn-primary">Add to Cart</a>
 	</div>
 </div>
